--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "api",
   "description": "",
   "version": "0.1.0",
-  "dependencies": {},
+  "dependencies": {
+    "serverless-offline": "^6.9.0"
+  },
   "devDependencies": {
     "serverless-dynamodb-local": "^0.2.39"
   }
