--- a/serverless.yml
+++ b/serverless.yml
@@ -26,7 +26,20 @@ provider:
   region: eu-central-1
   runtime: go1.x
   lambdaHashingVersion: 20201221
-
+  tracing:
+    apiGateway: true
+    lambda: true
+  iamRoleStatements:
+    - Effect: Allow
+      Action:
+        - dynamodb:DescribeTable
+        - dynamodb:Query
+        - dynamodb:Scan
+        - dynamodb:GetItem
+        - dynamodb:PutItem
+        - dynamodb:UpdateItem
+        - dynamodb:DeleteItem
+      Resource: "arn:aws:dynamodb:*:*:*"
 
 # you can add statements to the Lambda function's IAM Role here
 #  iamRoleStatements:
@@ -54,8 +67,14 @@ package:
     - ./bin/**
 
 functions:
-  groupCreate:
-    handler: bin/groupCreate
+  groupStore:
+    handler: bin/groupStore
+    events:
+      - httpApi:
+          path: /groups/store
+          method: post
+  groupList:
+    handler: bin/groupIndex
     events:
       - httpApi:
           path: /groups
@@ -140,7 +159,10 @@ resources:
           WriteCapacityUnits: 1
 plugins:
   - serverless-dynamodb-local
+  - serverless-offline
 custom:
+  endpoints:
+    dynamodb-url: 'http://localhost:8000'
   dynamodb:
     # If you only want to use DynamoDB Local in some stages, declare them here
     stages:
