--- a/serverless.yml
+++ b/serverless.yml
@@ -145,19 +145,65 @@ functions:
 #       Value: "Some output value"
 resources:
   Resources:
-    UsersTable:
+    WorkspacesTable:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        TableName: SortingHatWorkspace
+        AttributeDefinitions:
+          - AttributeName: Workspace
+            AttributeType: S
+        KeySchema:
+          - AttributeName: Workspace
+            KeyType: HASH
+        BillingMode: PROVISIONED
+        ProvisionedThroughput:
+          ReadCapacityUnits: 1
+          WriteCapacityUnits: 1
+    ContextsTable:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        TableName: SortingHatContexts
+        AttributeDefinitions:
+          - AttributeName: WorkspaceChannel
+            AttributeType: S
+        KeySchema:
+          - AttributeName: WorkspaceChannel
+            KeyType: HASH
+        BillingMode: PROVISIONED
+        ProvisionedThroughput:
+          ReadCapacityUnits: 1
+          WriteCapacityUnits: 1
+    GroupsTable:
       Type: AWS::DynamoDB::Table
       Properties:
         TableName: SortingHatGroups
         AttributeDefinitions:
           - AttributeName: GroupId
             AttributeType: S
-          - AttributeName: ChannelId
+          - AttributeName: ContextReference
             AttributeType: S
         KeySchema:
           - AttributeName: GroupId
             KeyType: HASH
-          - AttributeName: ChannelId
+          - AttributeName: ContextReference
+            KeyType: RANGE
+        BillingMode: PROVISIONED
+        ProvisionedThroughput:
+          ReadCapacityUnits: 1
+          WriteCapacityUnits: 1
+    TasksTable:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        TableName: SortingHatSortedTasks
+        AttributeDefinitions:
+          - AttributeName: GroupId
+            AttributeType: S
+          - AttributeName: BroadcastedAt
+            AttributeType: S
+        KeySchema:
+          - AttributeName: GroupId
+            KeyType: HASH
+          - AttributeName: BroadcastedAt
             KeyType: RANGE
         BillingMode: PROVISIONED
         ProvisionedThroughput:
