--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "description": "",
   "version": "0.1.0",
   "dependencies": {
+    "serverless-finch": "^2.6.0",
     "serverless-offline": "^6.9.0"
   },
   "devDependencies": {
-    "serverless-dynamodb-local": "^0.2.39"
+    "serverless-dynamodb-local": "^0.2.39",
+    "serverless-step-functions": "^2.30.0"
   }
 }
